request blocking gif

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 			<section>block requests
 				<section><i class="far fa-frown-open"></i> I need to see how the application behaves if this specific request fails</section>
 				<section><i class="far fa-laugh-beam"></i> Block the request via the network tab. Find the request, right click, "block request url"</section>
+				<section><img src="gifs/requestBlocking.gif"></section>
 				<section><i class="far fa-comment"></i> This will block the request URL between reloads, so the block must be removed at some point. If a
 				request is blocked, a "request blocking" tab will show up next to the embedded console.</section>
 			</section>
