--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
 				request is blocked, a "request blocking" tab will show up next to the embedded console.</section>
 			</section>
 			<section>source maps and edit in place
-				<section><i class="far fa-frown-open"></i> I want to make a small change and see its effect but it takes 10 minutes to build the
-				application, reload my browser, etc etc.</section>
+				<section><i class="far fa-frown-open"></i> Trying small changes requires a long build, reload, and navigate cycle.  I want to check my small changes quickly.</section>
 				<section><i class="far fa-laugh-beam"></i> Turn off source maps by going to settings in CDT, under sources, uncheck "source maps". Now,
 				open the file you want to modify in the sources tab of CDT. Make your changes, and save. The next time
 				Chrome executes that path, it will use your modified code.</section>
 				<section><i class="far fa-comment"></i> Chrome DevTools chokes and dies if you do this with an absurdly large file. Think bundled code (sometimes we
 				incorrectly refer to that as "minified" code).</section>
+				//TODO: Luke skywalker gifs
 			</section>
 			<section>loading modules in the console
 				<section><i class="far fa-frown-open"></i> I want to kick around this specific module and see how it behaves.</section>
