source maps gif

--- a/index.html
+++ b/index.html
@@ -96,6 +96,9 @@
 						</tr>
 					</table>
 				</section>
+				<section>
+					<img src="gifs/turnOffSourceMaps.gif">
+				</section>
 				<section><i class="far fa-comment"></i> Chrome DevTools chokes and dies if you do this with an absurdly
 					large file. Think bundled code (sometimes refered to as "minified" around here).</section>
 			</section>
