--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
 		integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 	<style>
-	table tr td { vertical-align: middle !important; }</style>
-	</head>
+		table tr td {
+			vertical-align: middle !important;
+		}
+	</style>
+</head>
 
 <body>
 	<div class="reveal">
